Fri Feb  7 14:18:40 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c libxslt/keys.c libxslt/pattern.c
	  libxslt/preproc.c libxslt/transform.c libxslt/variables.c
	  libxslt/xslt.c: tried to fix 105387 and all similar cases
	  in the library sources.

Wed Feb  5 16:04:10 CET 2003 Daniel Veillard <daniel@veillard.com>

	* doc/* configure.in: preparing for release of 1.0.25

Wed Feb  5 00:07:43 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: fixed bug #99623

Tue Feb  4 22:10:17 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #105116 sometimes one need
	  to generate a default namespace reset xmlns="" in the output
	* tests/docs/Makefile.am tests/docs/bug-103.xml
	  tests/general/Makefile.am tests/general/bug-103*: added the
	  example in the regression tests for this case

Tue Feb  4 18:39:35 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/transform.c: changed the way the
	  root element of value tree are handled to fix bug #104123

Tue Feb  4 18:15:01 CET 2003 Daniel Veillard <daniel@veillard.com>

	* README: change of policy w.r.t. mails
	* configure.in: small cleanup
	* libxslt/transform.c libxslt/xslt.c libxslt/variables.c: fixed
	  a couple of bugs raised by Eric van der Vlist in #104114
	* tests/exslt/*/*.out: slight change to the tests

Tue Feb  4 17:18:54 CET 2003 Daniel Veillard <daniel@veillard.com>

	* doc/xsltproc.1 doc/xsltproc.xml: fixing bug #104096, put
	  emphasis on the fact that --docbook should not be used
	  for XML.

Wed Jan 22 16:43:49 CET 2003 Daniel Veillard <daniel@veillard.com>

	* python/libxslt.c: fixed a couple of return error #104150
	  reported by Peter O'Shea 

Fri Jan 17 17:43:43 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: fixed a double free of stylesheet
	  when applied to a standalone stylesheet

Tue Jan 14 16:22:48 CET 2003 Daniel Veillard <daniel@veillard.com>
