@@ -1,0 +1,2 @@
+warning: failed to load external entity "foofile.xml"
+warning: failed to load external entity "foo_file.xml"
